<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/model" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/itemName"/>
        <TextView
            android:id="@+id/tvModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="Модель"
            android:textSize="20dp"
            android:textColor="@color/valueColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/mark" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/itemName"/>
        <TextView
            android:id="@+id/tvMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40sp"
            android:text="Код"
            android:textSize="20dp"
            android:textColor="@color/valueColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/problem" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/itemName"/>
        <TextView
            android:id="@+id/tvProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="73sp"
            android:text="Проблема"
            android:textSize="20dp"
            android:textColor="@color/valueColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/fix" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/itemName"/>
        <TextView
            android:id="@+id/tvFix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="64sp"
            android:text="Ремонт"
            android:textSize="20dp"
            android:textColor="@color/valueColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/cost" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/itemName"/>
        <TextView
            android:id="@+id/tvCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="цена"
            android:textSize="20dp"
            android:textColor="@color/valueColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/user" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/itemName"/>
        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50sp"
            android:text="пользователь"
            android:textSize="20dp"
            android:textColor="@color/valueColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/date" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/itemName"/>
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="85sp"
            android:text="дата"
            android:textSize="20dp"
            android:textColor="@color/valueColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/status" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/itemName"/>
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="85sp"
            android:text="состояние"
            android:textSize="20dp"
            android:textColor="@color/valueColor"/>
    </LinearLayout>



</LinearLayout>
